--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,5 +11,10 @@
     "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.3",
+    "@types/react": "^18.2.45",
+    "@types/node": "^20.10.6"
   }
 }
