Manual Deploy → Clear cache

--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,8 @@ services:
     name: rticu-api
     runtime: python
     rootDir: services/api
-    buildCommand: "python -m pip install -U pip setuptools wheel && pip install -r requirements.txt"
-    startCommand: "uvicorn app.main:app --host 0.0.0.0 --port $PORT"
+    buildCommand: pip install -r requirements.txt
+    startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
         value: "3.11.9"
@@ -15,8 +15,8 @@ services:
     name: rticu-worker
     runtime: python
     rootDir: services/worker
-    buildCommand: "python -m pip install -U pip setuptools wheel && pip install -r requirements.txt"
-    startCommand: "python -m worker.main"
+    buildCommand: pip install -r requirements.txt
+    startCommand: python -m worker.main
     envVars:
       - key: PYTHON_VERSION
         value: "3.11.9"
