--- a/services/api/requirements.txt
+++ b/services/api/requirements.txt
@@ -3,5 +3,5 @@ uvicorn[standard]==0.30.6
 pydantic==2.8.2
 pydantic-core==2.20.1
 python-dotenv==1.0.1
-psycopg[binary]==3.1.18
+psycopg==3.2.3
 orjson==3.10.7
