--- a/render.yaml
+++ b/render.yaml
@@ -1,3 +1,24 @@
-rootDir: services/api
-buildCommand: "python -m pip install -U pip setuptools wheel && pip install -r requirements.txt"
-startCommand: "uvicorn app.main:app --host 0.0.0.0 --port $PORT"
+services:
+  - type: web
+    name: rticu-api
+    runtime: python
+    rootDir: services/api
+    buildCommand: "python -m pip install -U pip setuptools wheel && pip install -r requirements.txt"
+    startCommand: "uvicorn app.main:app --host 0.0.0.0 --port $PORT"
+    envVars:
+      - key: PYTHON_VERSION
+        value: "3.11.9"
+      - key: DATABASE_URL
+        sync: false
+
+  - type: worker
+    name: rticu-worker
+    runtime: python
+    rootDir: services/worker
+    buildCommand: "python -m pip install -U pip setuptools wheel && pip install -r requirements.txt"
+    startCommand: "python -m worker.main"
+    envVars:
+      - key: PYTHON_VERSION
+        value: "3.11.9"
+      - key: DATABASE_URL
+        sync: false
