--- a/services/api/requirements.txt
+++ b/services/api/requirements.txt
@@ -1,4 +1,5 @@
-fastapi==0.115.0
-uvicorn[standard]==0.30.6
-python-dotenv==1.0.1
-psycopg2-binary==2.9.9
+fastapi
+uvicorn[standard]
+SQLAlchemy
+psycopg2-binary
+pydantic
